# ta-indicators-from-scratch

./: .gitignore  README.md  pyproject.toml
samples/: btcusdt_1m_candles.jsonl
src/ta_indicators_from_scratch/: __init__.py  __main__.py  engine.py  models.py  pipeline.py  series.py
src/ta_indicators_from_scratch/indicators/: __init__.py  bollinger.py  ema.py  macd.py  rsi.py  sma.py
tests/: test_bollinger.py  test_ema.py  test_engine.py  test_macd.py  test_rsi.py  test_sma.py
