[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ta-indicators-from-scratch"
version = "0.1.0"
description = "NumPy-vectorized technical indicators implemented from scratch without third-party TA libraries."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "juanmmm21" }]
keywords = ["technical-analysis", "indicators", "rsi", "macd", "bollinger", "numpy", "trading"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
ta-indicators-from-scratch = "ta_indicators_from_scratch.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ta_indicators_from_scratch"]

[tool.hatch.build.targets.sdist]
include = ["src/ta_indicators_from_scratch", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
